--- a/mysite/abcd/templates/abcd/text.html
+++ b/mysite/abcd/templates/abcd/text.html
@@ -1,10 +1,32 @@
-{%extends ‘base.html’%}
+{%extends 'abcd/base.html'%}
 
 {%block title%}
 Главная страница
 {%endblock%}
 
 {%block content%}
-   <h1>Главная страница</h1>
-   <p>Место для текста</p>
+{%load static%}
+<div class="film1">
+   <img src="{%static 'abcd/img/gravitation.jpg'%}">
+   <h2>Гравитация</h2>
+   <p1>Доктор Райан Стоун, блестящий специалист в области<br>
+       медицинского инжиниринга, отправляется в свою первую <br>
+       космическую миссию под командованием ветерана астронавтики<br>
+       Мэтта Ковальски, для которого этот полет - последний перед<br>
+       отставкой. Но во время, казалось бы, рутинной работы за бортом случается катастрофа.</p1>
+
+</div>
+
+<div class="film2">
+   <img src="{%static 'abcd/img/interstellar.jpg'%}">
+   <h2>Интерстеллар</h2>
+   <p1 align =right>
+       Наше время на Земле подошло к концу, команда исследователей<br>
+       берет на себя самую важную миссию в истории человечества; <br>
+       путешествуя за пределами нашей галактики, чтобы узнать есть<br>
+       ли у человечества будущее среди звезд.<br>
+
+   </p1>
+
+</div>
 {%endblock%}
